objects/DMAPP__Dealmaker_Political_Map_Settings2__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting controls which attributes are switched on and off on the Political Map.</description>
    <fields>
        <fullName>DMAPP__AM_Absolute_Weight_Field__c</fullName>
        <description>The name of the &apos;Absolute Weight&apos; custom field on the Account Political Map Contact object.</description>
        <inlineHelpText>The name of the &apos;Absolute Weight&apos; custom field on the Account Political Map Contact object.</inlineHelpText>
        <label>AM Absolute Weight Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Color_Field__c</fullName>
        <description>The name of the &apos;Color&apos; custom field on the Account Political Map Contact object.</description>
        <inlineHelpText>The name of the &apos;Color&apos; custom field on the Account Political Map Contact object.</inlineHelpText>
        <label>AM Color Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Squares_Field__c</fullName>
        <description>The name of the &apos;Squares&apos; custom field on the Account Political Map Contact object.</description>
        <inlineHelpText>The name of the &apos;Squares&apos; custom field on the Account Political Map Contact object.</inlineHelpText>
        <label>AM Squares Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Absolute_Weight_Field__c</fullName>
        <description>The name of the &apos;Absolute Weight&apos; custom field on the Political Map Contact object.</description>
        <inlineHelpText>The name of the &apos;Absolute Weight&apos; custom field on the Political Map Contact object.</inlineHelpText>
        <label>Absolute Weight Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Color_Field__c</fullName>
        <description>The name of the &apos;Color&apos; custom field on the Political Map Contact object.</description>
        <inlineHelpText>The name of the &apos;Color&apos; custom field on the Political Map Contact object.</inlineHelpText>
        <label>Color Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Contact_Creation_On_PoliticalMap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Status Attribute will not be shown</description>
        <label>Disable Political Map Contact Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Adaptability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Adaptability Attribute will not be shown</description>
        <inlineHelpText>If checked the Adaptability Attribute will not be shown</inlineHelpText>
        <label>Hide Adaptability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Contact_Profile_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Contact Profile Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Coverage Attribute will not be shown</description>
        <inlineHelpText>If checked the Coverage Attribute will not be shown</inlineHelpText>
        <label>Hide Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Decision_Orientation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Decision Orientation Attribute will not be shown</description>
        <inlineHelpText>If checked the Decision Orientation Attribute will not be shown</inlineHelpText>
        <label>Hide Decision Orientation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide the Issues section on the contact details</description>
        <inlineHelpText>Hide the Issues section on the contact details</inlineHelpText>
        <label>Hide Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Political_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Political Status Attribute will not be shown</description>
        <inlineHelpText>If checked the Political Status Attribute will not be shown</inlineHelpText>
        <label>Hide Political Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Status Attribute will not be shown</description>
        <inlineHelpText>If checked the Status Attribute will not be shown</inlineHelpText>
        <label>Hide Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Hide_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Key_Player_Political_Statuses__c</fullName>
        <description>Specify a list of political attributes to use for Key Player Auto-Import. Use ### as the separator.

Example: Inner Circle###Political Structure</description>
        <inlineHelpText>Specify a list of political attributes to use for Key Player Auto-Import. Use ### as the separator.

Example: Inner Circle###Political Structure</inlineHelpText>
        <label>Key Player Political Statuses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__LinkedIn_Handle_Field__c</fullName>
        <description>Use this field to specify a field for including a Linkedin profile for a contact.</description>
        <inlineHelpText>Use this field to specify a field for including a Linkedin profile for a contact.</inlineHelpText>
        <label>LinkedIn Handle Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Skin__c</fullName>
        <description>Use this field to specify the name of the skin which will define the glyphs and icons used by Political Map.</description>
        <inlineHelpText>Use this field to specify the name of the skin which will define the glyphs and icons used by Political Map.</inlineHelpText>
        <label>Skin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Squares_Field__c</fullName>
        <description>The name of the &apos;Squares&apos; custom field on the Political Map Contact object.</description>
        <inlineHelpText>The name of the &apos;Squares&apos; custom field on the Political Map Contact object.</inlineHelpText>
        <label>Squares Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Twitter_Handle_Field__c</fullName>
        <description>Use this field to specify a field for including a Twitter profile for a contact.</description>
        <inlineHelpText>Use this field to specify a field for including a Twitter profile for a contact.</inlineHelpText>
        <label>Twitter Handle Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dealmaker Political Map Settings</label>
</CustomObject>